Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -97,13 +97,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
-    "number_of_weeks = None"
+    "number_of_weeks = 3\n",
+    "print(number_of_weeks)"
    ]
   },
   {
